[gd_scene load_steps=5 format=3 uid="uid://crcexqdtm1rrw"]

[ext_resource type="Script" uid="uid://chh72rphihqi2" path="res://Base/base_item.gd" id="1_vxp7x"]
[ext_resource type="Texture2D" uid="uid://cyueoxuksu1lj" path="res://Resources/Placeholders/Potions-Ingredients/Fantasy potions 30+/Potions/Mana Rank 1.png" id="2_vxp7x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56rss"]
size = Vector2(125, 269)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_new0r"]
size = Vector2(153, 295)

[node name="base_item" type="RigidBody2D"]
collision_layer = 5
collision_mask = 5
mass = 1000.0
script = ExtResource("1_vxp7x")
item_name = "Mana refill"

[node name="item_sprite" type="Sprite2D" parent="."]
scale = Vector2(0.192154, 0.192154)
texture = ExtResource("2_vxp7x")

[node name="Item_collision" type="CollisionShape2D" parent="."]
scale = Vector2(0.37126, 0.37126)
shape = SubResource("RectangleShape2D_56rss")
debug_color = Color(0, 0.6, 0.701961, 0.843137)

[node name="input_collision" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="input_collision"]
scale = Vector2(0.30786, 0.342546)
shape = SubResource("RectangleShape2D_new0r")
debug_color = Color(1, 0.933333, 0, 0.368627)
